[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]
[ext_resource path="res://Fonts/statusplz.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 14
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "show_chat"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( -277, 362 ), Vector2( 2, 362 ) ]
}

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextStatus" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamCoins" type="Label" parent="TextStatus"]
margin_right = 90.0
margin_bottom = 14.0
text = "Team Coins: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YourCoins" type="Label" parent="TextStatus"]
margin_top = 18.0
margin_right = 90.0
margin_bottom = 32.0
text = "Your Coins: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat" type="VBoxContainer" parent="."]
margin_left = -277.0
margin_top = 362.0
margin_right = -5.0
margin_bottom = 512.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatText" type="TextEdit" parent="Chat"]
margin_right = 272.0
margin_bottom = 120.0
rect_min_size = Vector2( 140, 120 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/line_number_color = Color( 0, 0, 0, 1 )
readonly = true
virtual_keyboard_enabled = false
smooth_scrolling = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatControl" type="HBoxContainer" parent="Chat"]
margin_top = 124.0
margin_right = 272.0
margin_bottom = 149.0

[node name="ChatInput" type="LineEdit" parent="Chat/ChatControl"]
margin_right = 218.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="ChatSend" type="Button" parent="Chat/ChatControl"]
margin_left = 222.0
margin_right = 272.0
margin_bottom = 25.0
text = "Send"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Chat"]
anims/show_chat = SubResource( 3 )
[connection signal="focus_entered" from="Chat/ChatControl/ChatInput" to="." method="_on_ChatInput_focus_entered"]
[connection signal="focus_exited" from="Chat/ChatControl/ChatInput" to="." method="_on_ChatInput_focus_exited"]
[connection signal="pressed" from="Chat/ChatControl/ChatSend" to="." method="_on_ChatSend_pressed"]
